build/log/idf_py_stdout_output_19760
[1/13] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\esp\station\build\bootloader\esp-idf\esptool_py && D:\esp\esp_idf\python_env\idf5.0_py3.11_env\Scripts\python.exe D:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/esp/station/build/bootloader/bootloader.bin"
Bootloader binary size 0x6710 bytes. 0x8f0 bytes (8%) free.
[2/11] Building C object esp-idf/http_server_app/CMakeFiles/__idf_http_server_app.dir/http_server_app.c.obj
FAILED: esp-idf/http_server_app/CMakeFiles/__idf_http_server_app.dir/http_server_app.c.obj 
ccache D:\esp\esp_idf\tools\xtensa-esp32-elf\esp-2022r1-11.2.0\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -ID:/esp/station/build/config -ID:/esp/station/common/http_server_app -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/newlib/platform_include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/freertos/FreeRTOS-Kernel/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/freertos/esp_additions/include/freertos -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/freertos/esp_additions/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/include/soc -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/include/soc/esp32 -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/port/esp32/. -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/port/esp32/private_include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/heap/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/log/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/soc/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/soc/esp32/. -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/soc/esp32/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/hal/esp32/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/hal/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/hal/platform_port/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_rom/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_rom/include/esp32 -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_rom/esp32 -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_common/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_system/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_system/port/soc -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_system/port/include/private -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/xtensa/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/xtensa/esp32/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/include/apps -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/include/apps/sntp -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/lwip/src/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/port/esp32/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/port/esp32/include/arch -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_http_server/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_event/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/http_parser -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_wifi/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_phy/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_phy/esp32/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_netif/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/nvs_flash/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_partition/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_eth/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/driver/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/driver/deprecated -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/driver/esp32/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_pm/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_ringbuf/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp-tls -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp-tls/esp-tls-crypto -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/mbedtls/port/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/mbedtls/mbedtls/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/mbedtls/mbedtls/library -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/mbedtls/esp_crt_bundle/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=D:/esp/station=. -fmacro-prefix-map=D:/esp/Espressif/frameworks/esp-idf-v5.0.2=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"HEAD-HASH-NOTFOUND\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/http_server_app/CMakeFiles/__idf_http_server_app.dir/http_server_app.c.obj -MF esp-idf\http_server_app\CMakeFiles\__idf_http_server_app.dir\http_server_app.c.obj.d -o esp-idf/http_server_app/CMakeFiles/__idf_http_server_app.dir/http_server_app.c.obj -c D:/esp/station/common/http_server_app/http_server_app.c
D:/esp/station/common/http_server_app/http_server_app.c: In function 'post_slider_handler':
D:/esp/station/common/http_server_app/http_server_app.c:226:5: error: too many arguments to function 'http_post_slider_callback'
  226 |     http_post_slider_callback(buf, req->content_len);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~
[3/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj
ninja: build stopped: subcommand failed.
